--- a/styles.css
+++ b/styles.css
@@ -57,14 +57,19 @@ h1 {
 }
 
 .btn {
-    padding: 10px 20px;
-    background-color: #ff4d6d;
+   padding: 10px 20px;
+   
     color: white;
     border: none;
     border-radius: 30px;
     cursor: pointer;
     font-size: 1em;
     transition: background-color 0.3s ease;
+    background-color: dimgrey !important;
+    margin-right: 0px;
+    margin-left: 223px;
+    width: 128px;
+    height: 35px;
 }
 
 .btn:hover {
